addons/ingress-nginx-controller/objects/external-ingress-workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-workload
spec:
  replicas: 2
  selector:
    matchLabels:
      app: external-workload
  template:
    metadata:
      labels:
        app: external-workload
    spec:
      containers:
      - name: external-workload
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        command: ["/bin/bash"]
        args: 
          - |
            "-c"
            "echo \"You are connected through an External Ingress Controller! \n Hello from $(hostname)!\"
            > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-workload-ingress
  labels:
    name: external-workload-ingress
spec:
  ingressClassName: external-ingress-nginx-class
  rules:
  - host: namutest.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: external-workload-svc
            port: 
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: external-workload-svc
spec:
  selector:
    app: external-workload
  ports:
  - port: 8080
    targetPort: 80
